Cloud.NET, extension methods, fixes, improvements and cleanups
- CHG: continued coding Cloud.NET project
- ADD: SaveAs* extension methods for BitmapSource objects
- ADD: TakeScreenshot() extension method for FrameworkElements
- ADD: BeginInvoke() extension methods for DispatcherObjects
- FIX: documentation fixes
- CHG: code improvmenets
- CHG: minor cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/App.config
 
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/config.ini
+/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj.user
