--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -59,6 +59,29 @@
       <DependentUpon>ValueConverterBase.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\ClrToolboxWpfExtensionMethods.cs" />
+    <Compile Include="Extensions\Dispatcher.cs" />
+    <Compile Include="Extensions\Imaging.cs" />
+    <Compile Include="Extensions\Imaging.SaveAsBmp.cs">
+      <DependentUpon>Imaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Imaging.SaveAsGif.cs">
+      <DependentUpon>Imaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Imaging.SaveAsPng.cs">
+      <DependentUpon>Imaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Imaging.SaveAsJpeg.cs">
+      <DependentUpon>Imaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Imaging.SaveAsTiff.cs">
+      <DependentUpon>Imaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Imaging.TakeScreenshot.cs">
+      <DependentUpon>Imaging.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Dispatcher.BeginInvoke.cs">
+      <DependentUpon>Dispatcher.cs</DependentUpon>
+    </Compile>
     <Compile Include="Input\SimpleCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
