--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.sample.config
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.sample.config
@@ -6,9 +6,14 @@
   -->
 
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
+  </system.web>
 
+  <system.webServer>
+    <handlers>
+      <add name="ConfigIni_Root" path="/config.ini" verb="*" type="System.Web.HttpForbiddenHandler" resourceType="Unspecified" />
+    </handlers>
+  </system.webServer>
 </configuration>
