--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,4 @@
 /MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj.user
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/obj
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/bin
+Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/users.ini
