Cloud.NET and cleanups
- ADD: first working version of Cloud.NET
- CHG: code cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,5 @@
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/obj
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/bin
 Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/users.ini
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.Test/obj
+/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.Test/bin
