--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.sample.config
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/Web.sample.config
@@ -12,8 +12,13 @@
   </system.web>
 
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+    </modules>
+    
     <handlers>
       <add name="ConfigIni_Root" path="/config.ini" verb="*" type="System.Web.HttpForbiddenHandler" resourceType="Unspecified" />
+      <add name="UsersIni_Root" path="/users.ini" verb="*" type="System.Web.HttpForbiddenHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
 </configuration>
