--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -554,6 +554,10 @@
       <Link>Helpers\ScriptHelper.SetSimplePredicateWrapper.cs</Link>
       <DependentUpon>ScriptHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.Append.cs">
+      <Link>Helpers\StringHelper.Append.cs</Link>
+      <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.AsHexString.cs">
       <Link>Helpers\StringHelper.AsHexString.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
@@ -1947,6 +1951,10 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Scripting.SetSimplePredicateWrapper.cs">
       <Link>Extensions\Scripting.SetSimplePredicateWrapper.cs</Link>
       <DependentUpon>Scripting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Strings.Append.cs">
+      <Link>Extensions\Strings.Append.cs</Link>
+      <DependentUpon>Strings.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Strings.AsHexString.cs">
       <Link>Extensions\Strings.AsHexString.cs</Link>
