--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/MarcelJoachimKloubert.CloudNET.SDK.csproj
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/MarcelJoachimKloubert.CloudNET.SDK.csproj
@@ -21,6 +21,9 @@
     <DefineConstants>TRACE;DEBUG;NET20 NET2</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <NoWarn>3021</NoWarn>
+    <DocumentationFile>bin\Debug\MarcelJoachimKloubert.CloudNET.SDK.XML</DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -36,6 +39,12 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloudServer.cs" />
+    <Compile Include="Helpers\IOHelper.cs" />
+    <Compile Include="Helpers\StringHelper.cs" />
+    <Compile Include="IO\CloudDirectory.cs" />
+    <Compile Include="IO\CloudFile.cs" />
+    <Compile Include="IO\ListCloudDirectoryResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="_Embedded\JSON.NET\Bson\BsonBinaryType.cs" />
     <Compile Include="_Embedded\JSON.NET\Bson\BsonBinaryWriter.cs" />
